Fixing images stretch

--- a/Styles/_job.scss
+++ b/Styles/_job.scss
@@ -172,7 +172,7 @@ $darktext: rgb(121, 121, 121);
                         border-radius: 5px;
                         height: 100%;
                         width: 100%;
-                        object-fit: cover;
+                        object-fit: contain;
                     }
                 }
 
