--- a/Styles/style.css
+++ b/Styles/style.css
@@ -19727,8 +19727,8 @@ li {
   border-radius: 5px;
   height: 100%;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .job .job-container .options {
